<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:menuCategory="container">
        <item android:title="@string/chucnang_name">
        <menu>
            <item android:id="@+id/nav_chi"
               android:icon="@drawable/chi"
                android:title="@string/chi_name"/>
             <item android:id="@+id/nav_thu"
               android:icon="@drawable/thu"
                android:title="@string/thu_name"/>
            <item android:id="@+id/nav_thongke"
                android:icon="@drawable/thongke"
                android:title="@string/thongke_name"/>
        </menu>
        </item>
        <item android:title="@string/chucnang1_name">
        <menu>
    <item android:id="@+id/nav_gioithieu"
        android:icon="@drawable/ask"
        android:title="@string/gioithieu_name"/>
    <item android:id="@+id/nav_thoat"
        android:icon="@drawable/exit"
        android:title="@string/thoat_name"/>
        </menu>
        </item>
    </group>

</menu>